--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
 
         <!--Portfolio nav-->
 
-        <ul class="filter-list list">
+         <ul class="filter-list list">
           <li>
             <button class="filter-btn accent-btn" type="button">Все</button>
           </li>
@@ -97,12 +97,11 @@
           <li>
             <button class="filter-btn" type="button">Маркетинг</button>
           </li>
-        </ul>
-        </div>
+         </ul>
 
         <!--Portfolio img-->
 
-        <section class="section portfolio-section">
+      <section class="section portfolio-section">
         <ul class="list portfolio-list">
           <li class="portfolio-item">
             <a class="link portfolio-link" href="">
@@ -239,21 +238,21 @@
             </a>
           </li>
         </ul>
-        </div>
-      </section>
-    </main>
+      </div>
+    </section>
+  </main>
 
     <!--Footer-->
 
     <footer class="footer">
-      <div class="conteiner">
+      <div class="conteiner footer-conteiner">
       <a class="logo link" href="/"
         >Web<span class="logo-white">Studio</span></a
       >
 
       <address class="address">
         <ul class="list">
-          <li>
+          <li class="footer-item">
             <a
               class="link adress-item"
               href="https://goo.gl/maps/bs3cHrX6vN8yE2N99"
@@ -262,12 +261,12 @@
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li>
+          <li class="footer-item">
             <a class="link footer-contact" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="footer-item">
             <a class="link footer-contact" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
