--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <ul class="about-list list">
             <li class="about-item">
               <img
-                src="./imges/about photo/box1.jpg"
+                src="./imges/about-photo/box1.jpg"
                 alt="Разработка сайта"
                 width="370"
                 height="294"
@@ -143,7 +143,7 @@
 
             <li class="about-item">
               <img
-                src="./imges/about photo/box2.jpg"
+                src="./imges/about-photo/box2.jpg"
                 alt="Разработка мобильных преложений"
                 width="370"
                 height="294"
@@ -151,7 +151,7 @@
             </li>
             <li class="about-item">
               <img
-                src="./imges/about photo/box3.jpg"
+                src="./imges/about-photo/box3.jpg"
                 alt="Графика"
                 width="370"
                 height="294"
@@ -170,7 +170,7 @@
           <ul class="list team-list">
             <li class="team-item">
               <img
-                src="./imges/photo team/photo1.jpg"
+                src="./imges/photo-team/photo1.jpg"
                 alt="Дизайнер продукта"
                 width="270"
                 height="260"
@@ -183,7 +183,7 @@
 
             <li>
               <img
-                src="./imges/photo team/photo2.jpg"
+                src="./imges/photo-team/photo2.jpg"
                 alt="Фронтенд-разработчик"
                 width="270"
                 height="260"
@@ -196,7 +196,7 @@
 
             <li>
               <img
-                src="./imges/photo team/photo3.jpg"
+                src="./imges/photo-team/photo3.jpg"
                 alt="Маркетолог"
                 width="270"
                 height="260"
@@ -209,7 +209,7 @@
 
             <li>
               <img
-                src="./imges/photo team/photo4.jpg"
+                src="./imges/photo-team/photo4.jpg"
                 alt="Дизайнер интерфейса"
                 width="270"
                 height="260"
@@ -247,8 +247,8 @@
               <a class="link footer-contact" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
-            </li class="footer-item">
-            <li>
+            </li>
+            <li class="footer-item">
               <a class="link footer-contact" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
