--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <main>
       <!--Section hero-->
 
-      <section class="section hero">
+      <section class="hero">
         <div class="conteiner">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="btn" type="button">Заказать услугу</button>
@@ -90,8 +90,8 @@
         <div class="conteiner">
           <h2 class="visually-hidden">Преимущества</h2>
 
-          <ul class="list priority-list">
-            <li class="priority-item">
+          <ul class="list card-set">
+            <li class="item priority-item">
               <h3 class="priority-title">Внимание к деталям</h3>
               <p class="priority-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -99,7 +99,7 @@
               </p>
             </li>
 
-            <li class="priority-item">
+            <li class="item priority-item">
               <h3 class="priority-title">Пунктуальность</h3>
               <p class="priority-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -107,14 +107,14 @@
               </p>
             </li>
 
-            <li class="priority-item">
+            <li class="item priority-item">
               <h3 class="priority-title">Планирование</h3>
               <p class="priority-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="priority-item">
+            <li class="item priority-item">
               <h3 class="priority-title">Современные технологии</h3>
               <p class="priority-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -125,14 +125,16 @@
         </div>
       </section>
 
+      
+
       <!--About company -->
 
       <section class="section about">
         <div class="conteiner">
-          <h2 class="about-title">Чем мы занимаемся</h2>
+          <h2 class="section-title">Чем мы занимаемся</h2>
 
-          <ul class="about-list list">
-            <li class="about-item">
+          <ul class="list card-set">
+            <li class="item about-item">
               <img
                 src="./imges/about-photo/box1.jpg"
                 alt="Разработка сайта"
@@ -141,7 +143,7 @@
               />
             </li>
 
-            <li class="about-item">
+            <li class=" item about-item">
               <img
                 src="./imges/about-photo/box2.jpg"
                 alt="Разработка мобильных преложений"
@@ -149,7 +151,7 @@
                 height="294"
               />
             </li>
-            <li class="about-item">
+            <li class="item about-item">
               <img
                 src="./imges/about-photo/box3.jpg"
                 alt="Графика"
@@ -163,12 +165,12 @@
 
       <!--Team-->
 
-      <section class="section team">
+      <section class="team">
         <div class="conteiner">
-          <h2 class="team-title">Наша команда</h2>
+          <h2 class="section-title">Наша команда</h2>
 
-          <ul class="list team-list">
-            <li class="team-item">
+          <ul class="list card-set">
+            <li class="item team-item">
               <img
                 src="./imges/photo-team/photo1.jpg"
                 alt="Дизайнер продукта"
@@ -181,7 +183,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="item team-item">
               <img
                 src="./imges/photo-team/photo2.jpg"
                 alt="Фронтенд-разработчик"
@@ -194,7 +196,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="item team-item">
               <img
                 src="./imges/photo-team/photo3.jpg"
                 alt="Маркетолог"
@@ -207,7 +209,7 @@
               </div>
             </li>
 
-            <li>
+            <li class="item team-item">
               <img
                 src="./imges/photo-team/photo4.jpg"
                 alt="Дизайнер интерфейса"
@@ -228,7 +230,7 @@
 
     <footer class="footer">
       <div class="conteiner footer-conteiner">
-        <a class="logo link" href="/"
+        <a class="logo link logo-footer" href="/"
           >Web<span class="logo-white">Studio</span></a
         >
 
