--- a/portfolio.html
+++ b/portfolio.html
@@ -100,8 +100,8 @@
 
           <!--Portfolio img-->
 
-          <ul class="list portfolio-list">
-            <li class="portfolio-item">
+          <ul class="list card-set">
+            <li class="item portfolio-item">
               <a class="link portfolio-link" href="">
                 <img
                   src="./imges/portfolio/img1.jpg"
@@ -116,7 +116,7 @@
               </a>
             </li>
 
-            <li class="portfolio-item">
+            <li class="item portfolio-item">
               <a class="link" href="">
                 <img
                   src="./imges/portfolio/img2.jpg"
@@ -133,7 +133,7 @@
               </a>
             </li>
 
-            <li class="portfolio-item">
+            <li class="item portfolio-item">
               <a class="link" href="">
                 <img
                   src="./imges/portfolio/img3.jpg"
@@ -148,7 +148,7 @@
               </a>
             </li>
 
-            <li class="portfolio-item">
+            <li class="item portfolio-item">
               <a class="link" href="">
                 <img
                   src="./imges/portfolio/img4.jpg"
@@ -163,7 +163,7 @@
               </a>
             </li>
 
-            <li class="portfolio-item">
+            <li class="item portfolio-item">
               <a class="link" href="">
                 <img
                   src="./imges/portfolio/img5.jpg"
@@ -178,7 +178,7 @@
               </a>
             </li>
 
-            <li class="portfolio-item">
+            <li class="item portfolio-item">
               <a class="link" href="">
                 <img
                   src="./imges/portfolio/img6.jpg"
@@ -193,7 +193,7 @@
               </a>
             </li>
 
-            <li class="portfolio-item">
+            <li class="item portfolio-item">
               <a class="link" href="">
                 <img
                   src="./imges/portfolio/img7.jpg"
@@ -208,7 +208,7 @@
               </a>
             </li>
 
-            <li class="portfolio-item">
+            <li class="item portfolio-item">
               <a class="link" href="">
                 <img
                   src="./imges/portfolio/img8.jpg"
@@ -223,7 +223,7 @@
               </a>
             </li>
 
-            <li class="portfolio-item">
+            <li class="item portfolio-item">
               <a class="link" href="">
                 <img
                   src="./imges/portfolio/img9.jpg"
